fix(perspective-image): overflow:hidden for masthead

--- a/src/components/top-masthead.less
+++ b/src/components/top-masthead.less
@@ -1,6 +1,8 @@
 @import "../variables.less";
 
 .top-masthead {
+  overflow: hidden;
+
   .masthead-icons {
     position: relative;
 
